[gd_scene load_steps=3 format=3 uid="uid://cfcoie8y6ymwa"]

[ext_resource type="Script" uid="uid://db0en2k12raw4" path="res://Graphic Elements/ProgressBars/labelled_progress_bar.gd" id="1_4yho2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rg8h0"]
bg_color = Color(0, 0, 0.360784, 1)

[node name="LabelledProgressBar" type="ProgressBar"]
custom_minimum_size = Vector2(100, 25)
offset_right = 150.0
offset_bottom = 25.0
theme_override_styles/fill = SubResource("StyleBoxFlat_rg8h0")
show_percentage = false
script = ExtResource("1_4yho2")

[node name="NameLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
offset_right = -15.0
grow_horizontal = 0
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "Placeholder"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 2
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 25)
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 15.0

[node name="LevelLabel" type="RichTextLabel" parent="HBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "lv X"
fit_content = true
autowrap_mode = 0
vertical_alignment = 1

[node name="EnableButton" type="CheckButton" parent="HBoxContainer"]
layout_mode = 2
disabled = true

[connection signal="pressed" from="HBoxContainer/EnableButton" to="." method="_on_enable_button_pressed"]
